# sim

./: .gitignore  ROBOSUB_SYSTEM_GUIDE.md  ReadMe.md  bt_nodes_model.xml  frames_2026-02-20_15.04.21.gv  frames_2026-02-23_17.50.15.gv  frames_2026-03-21_18.47.54.gv
src/: README.md
src/auv_msgs/: CMakeLists.txt  package.xml
src/auv_msgs/action/: Surge.action
src/auv_msgs/msg/: ControlCommand.msg  Detection.msg
src/auv_msgs/srv/: Surge.srv
src/control_system/: package.xml  setup.py
src/control_system/control_system/: 6dof_pid copy.py  6dof_pid.py  allocation_matrix.py  global_planner_node.py  los_control copy.py  los_control.py  pico_controller.py  pressure_converter.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: ToPico.msg
src/custom_interfaces/srv/: PlanPath.srv
src/hydrogen/: package.xml  setup.py
src/hydrogen/hydrogen/: controller_node.py  data_accepter_distance_node_(to be used with model).txt  data_distance_node.py  dataset_collector.py  distance_node.py  imu_publisher.py  surge_service.py  teleop_hold_down.py  test.py  test_ROI_publisher.py  thruster_Dshot_publisher.py  thruster_teleop.py  thruster_teleop_GP.py  thruster_teleop_copy  vision_fusion_node.py  yolo_node.py
src/hydrogen/launch/: AUV.launch.py  RTAB_map.launch.py  model.launch.py
src/hydrogen/model/: cameras.xacro  main_frame.xacro  propellers.xacro  robot.gazebo  robot.xacro
src/hydrogen/parameters/: bridge_params.yaml  config.rviz
src/hydrogen/worlds/: buoyant_pool.sdf
src/hydrogen/worlds/octagon/: model.config  octagon.dae  octagon.sdf  octagon.stl
src/hydrogen/worlds/pool/: model.config  pool.dae  pool.sdf
src/hydrogen/worlds/preq_task/: model.config  preq_task.dae  preq_task.sdf  preq_task_2.dae
src/hydrogen/worlds/startgate/: startgate.dae
src/hydrogen/worlds/torpedo_board/: model.config  torpedo_board.sdf
src/hydrogen/worlds/trash/: bottle.stl  ladle.stl  model.config  table.stl  trash.sdf
src/hydrogen/worlds/woollett_pool_2024/: model.config
src/main_task/: CMakeLists.txt  main_task.xml  package.xml  start_gate.xml
src/main_task/config/: mission_params.yaml
src/main_task/include/main_task/: bt_nodes.h
src/main_task/src/: alignobject.xml  bt_nodes.cpp  main.cpp
src/main_task_bt/: CMakeLists.txt  package.xml
src/prequalification_bt/: CMakeLists.txt  bt_nodes.cpp  bt_nodes.h  main.cpp  package.xml  prequalification.xml
tests/UART_CRC/src/: crc8.hpp  main.cpp
