<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prequalification_bt</name>
  <version>0.0.0</version>
  <description>Behaviour tree mission executor for the AUV pre-qualification task</description>
  <maintainer email="animeshmishra211@gmail.com">Animesh Mishra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>custom_interfaces</depend>
  <depend>tf2</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>behaviortree_cpp</build_depend>
  <exec_depend>behaviortree_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
